[tool.poetry]
package-mode = false

[project]
name = "agentic-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Jane"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "tiktoken>=0.9.0",
    "langgraph>=0.3.0",
    "langchain-text-splitters>=0.3.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["."]
log_cli = true
log_cli_level = "INFO"
